# rvajs-ml-2021

./: .tool-versions  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: next.config.js  package.json
app/.next/cache/webpack/client-development/: 0.pack  index.pack
app/components/: Layout.tsx
app/pages/: client.tsx  server.tsx
app/pages/api/ml/: index.ts
app/public/: dt_james.onnx  explore_data.html  james_river_data_report.html  supervised_classification.html  supervised_regression.html
components/: Layout.tsx
model/: data.ipynb  dt_james.onnx  explore_data.ipynb  james_river_data_report.html  onnx_supervised_regression.ipynb  package.json  pyproject.toml  supervised_classification.ipynb  supervised_regression.ipynb  unsupervised_clustering.ipynb
pages/: index.tsx  server.tsx
pages/api/ml/: index.ts
public/: data.html  james_river_data_report.html  onnx_supervised_regression.html  unsupervised_clustering.html
