[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"
skl2onnx = "^1.8.0"
pandas = "^1.2.4"
pandas-profiling = {extras = ["notebook"], version = "^3.0.0"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
